--- a/views/trips.mustache
+++ b/views/trips.mustache
@@ -5,25 +5,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trip </title>
+    <title>Trip Planning App</title>
 </head>
 <body>
-    <h1>Your Upcoming Trips</h1>
-    <a href="/add-trip">Add Trip</a>
-        <ul>
             {{#allTrips}}
+    <h2>Welcome back, {{username}}</h2>
+    <h3>Your Upcoming Trips</h3>
         <div class="tripList">
             <form method="POST" action="/delete-trip">
             <input type="hidden" value={{tripId}} name="tripId"/>
-            <label>
-            <p>{{title}}</p>
-            <img src='{{image}}'>
-            <p>{{departureDate}}</p>
-            {{returnDate}}</label>
+            <p>Trip to: {{title}}</p>
+            <div class="tripImage"><img src='{{image}}' class="inputImage"></div>
+            <div class=dates>
+            Departure: {{departureDate}} - Return: {{returnDate}}</div>
+            <br>
             <button>Delete</button>
             </form>
+            <br>
+            <a href="/add-trip">Add Trip</a>
          </div>
             {{/allTrips}}
-        </ul>
+
+            {{^allTrips}}
+            <p>
+            You have no trips at this time.
+            </p>
+            <a href="/add-trip">Add Trip</a>
+            {{/allTrips}}
 </body>
 </html>
